# teai

./: .gitignore  Dockerfile  LICENSE  README.md  dashboard.php  docker-compose.prod.yml  docker-compose.yml  login.php  predict.php  register.php  register_handler.php
backend/: db.php
model/: predict.py  predict_cli.py  pyproject.toml
